--- a/logseq/bak/pages/JAVA NTK/2023-12-24T11_15_17.791Z.Desktop.md
+++ b/logseq/bak/pages/JAVA NTK/2023-12-24T11_15_17.791Z.Desktop.md
@@ -1314,60 +1314,11 @@
 		      }
 		  }
 		  ```
-	- **@Service**
-	  collapsed:: true
-		- ```java
-		  @Service
-		  public class EmployeeServiceImpl implements EmployeeService{
-		  
-		      private EmployeeRepository employeeRepository;
-		  
-		      @Autowired
-		      public EmployeeServiceImpl(EmployeeRepository employeeRepository) {
-		          this.employeeRepository = employeeRepository;
-		      }
-		      @Override
-		      public List<Employee> findAll() {
-		          return employeeRepository.findAll();
-		      }
-		  
-		      @Override
-		      public Employee findById(int theId) {
-		          Optional<Employee> employeeRepositoryById = employeeRepository.findById(theId);
-		          if (!employeeRepositoryById.isPresent()) {
-		              throw new RuntimeException("Did not find employee id - " + theId);
-		          } 
-		          return employeeRepositoryById.get();
-		      }
-		  
-		      @Override
-		      public Employee save(Employee theEmployee) {
-		          return employeeRepository.save(theEmployee);
-		      }
-		  
-		      @Override
-		      public void deleteById(int theId) {
-		          employeeRepository.deleteById(theId);
-		      }
-		  }
-		  ```
 	- **JPA** Jakarta Persistence API <--- ((6585e29c-10b7-48a5-b5c7-098aacf9c17e))
 		- Standard API for **ORM** Object-Relational-Mapping
 		- JPA Entity Manager and Data Source automatically created by Spring Boot based on application.properties file
 		- We can autowire/inject the JPA Entity Manager into our DAO
 		- **JPQL**
-		- **Spring Data JPA**
-			- create a DAO and just plug in your entity type and primary key
-			- extend **JpaRepository** interface
-				- ```java
-				  import com.apaner.springboot.democrud.entity.Employee;
-				  import org.springframework.data.jpa.repository.JpaRepository;
-				  
-				  @RepositoryRestResource(path="members")
-				  public interface EmployeeRepository extends JpaRepository<Employee, Integer>{
-				      // that's it ... no need to write any code
-				  }
-				  ```
 	- Spring Container
 	  collapsed:: true
 		- Object Factory
@@ -1408,9 +1359,7 @@
 			- Make an existing third-party class available to Spring framework
 	- Dependency Injection
 	  collapsed:: true
-		- **Dependency injection** is a design pattern we can use to implement ((65860759-5513-43a7-93af-413a0e4933f0)) , where the control being inverted is setting an object’s dependencies
-		  collapsed:: true
-			- It allows objects to receive other required objects from outside, rather than creating them internally.
+		- **Dependency injection** is a pattern we can use to implement IoC, where the control being inverted is setting an object’s dependencies
 			- **@Autowired**
 				- Injecting a *Coach* implementation
 				- Spring will scan for *@Components*
@@ -1487,12 +1436,10 @@
 				  ```
 			- Field Injection (deprecated)
 	- [IoC | Inversion of Control](https://www.baeldung.com/inversion-control-and-dependency-injection-in-spring)
-	  id:: 65860759-5513-43a7-93af-413a0e4933f0
 	  collapsed:: true
 		- The approach of outsourcing the construction and management of objects
 		- The control of object creation and lifecycle is transferred to the framework, rather than managed by the application code
 	- automatically handle Jackson Integration ((6586f09d-98e0-49c0-9dc7-75111b0f8e9f))
-	  collapsed:: true
 		- JSON data passed to REST controller converted to POJO
 		- POJO returned from REST controller converted to JSON
 	- ((65860759-1cf9-434e-8b9b-43ab191bdb20)) controller
@@ -1502,9 +1449,8 @@
 	- REpresentational State Transfer
 	- lightweight approach for communicating between applications.. we can make REST API calls over HTTP.. is language-independent
 	  id:: 6586c2d9-b10c-46a4-80ba-a2ba5b676ac8
-	- leverage HTTP methods for CRUD operations ((6586c838-35bc-45fd-82f5-aa0882ce0981))
+	- leverage HTTP methods for CRUD operations
 	- Controller
-	  collapsed:: true
 		- ```java
 		  import org.springframework.web.bind.annotation.GetMapping;
 		  import org.springframework.web.bind.annotation.RestController;
@@ -1532,42 +1478,8 @@
 		- The `@GetMapping("/")` annotation is a composed annotation that acts as a shortcut for `@RequestMapping(method = RequestMethod.GET)`. It's used to map HTTP GET requests onto specific handler methods. In this case, it's mapping the root URL `("/")` to the `sayHello` method.
 		- We can now access the **REST endpoint** at "/test/hello"
 	- Client Tool
-	  collapsed:: true
 		- Send HTTP requests to the REST Web Service - API
 		- **Postman**
-	- Exception Handling
-	  collapsed:: true
-		- return error as JSON
-		- ```java
-		  @ControllerAdvice
-		  public class StudentRestExceptionHandler {
-		  
-		      @ExceptionHandler
-		      public ResponseEntity<StudentErrorResponse> handleException(StudentNotFoundException exc){
-		  
-		          StudentErrorResponse error = new StudentErrorResponse();
-		          error.setStatus(HttpStatus.NOT_FOUND.value());
-		          error.setMessage(exc.getMessage());
-		          error.setTimeStamp(System.currentTimeMillis());
-		  
-		          return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-		      }
-		  
-		  
-		      @ExceptionHandler
-		      public ResponseEntity<StudentErrorResponse> handleException(Exception exc){
-		  
-		          StudentErrorResponse error = new StudentErrorResponse();
-		          error.setStatus(HttpStatus.BAD_REQUEST.value());
-		          error.setMessage(exc.getMessage());
-		          error.setTimeStamp(System.currentTimeMillis());
-		  
-		          return new ResponseEntity<>(error, org.springframework.http.HttpStatus.BAD_REQUEST);
-		      }
-		  ```
-	- **Spring Data Rest**
-		- leverage existing **JpaRepository**
-		- generate REST endpoints based on the entity types **Employee** -> **"/employees"**
 - [MVC](https://www.tutorialspoint.com/design_pattern/mvc_pattern.htm)
   collapsed:: true
 	- ```java
@@ -1667,34 +1579,6 @@
 		     }	
 		  }
 		  ```
-	- **Thymeleaf**
-		- ```html
-		  <!DOCTYPE HTML>
-		  <html xmlns:th="http://www.thymeleaf.org">
-		  
-		  <head>
-		      <title>Thymeleaf Demo</title>
-		  
-		      <link rel="stylesheet"
-		            th:href="@{/css/demo.css}" />
-		  </head>
-		  
-		  <body>
-		  
-		      <p th:text="'Time on the server is ' + ${theDate}" class="funny">
-		  
-		  </body>
-		  
-		  </html>
-		  
-		  ```
-		- ```css
-		  .funny {
-		      font-style: italic;
-		      color: #165816;
-		  }
-		  ```
-	- **Bootstrap**
 - **Hibernate**
   id:: 6585e29c-10b7-48a5-b5c7-098aacf9c17e
   collapsed:: true
